# ply-engine

./: .gitignore  Cargo.toml  LICENSE.md  README.md  SKILL.md  bettersyntax.md  buildbundle.sh  changelog.md  ply_bundle.js  quad.toml  text-styling.md
android/: main_activity_inject.java
js/: buildbundle.sh  net.js  ply_accessibility.js  ply_bundle.js  ply_fixes.js  storage.js
src/: accessibility.rs  accessibility_native.rs  accessibility_web.rs  align.rs  color.rs  easing.rs  elements.rs  engine.rs  errors.rs  id.rs  jobs.rs  layout.rs  lerp.rs  lib.rs  math.rs  prelude.rs  render_commands.rs  renderer.rs  shader_build.rs  shaders.rs  storage.rs  text.rs  text_input.rs  text_styling.rs
src/built_in_shaders/: crt.frag.glsl  dissolve.frag.glsl  foil.frag.glsl  glow.frag.glsl  gradient_conic.frag.glsl  gradient_linear.frag.glsl  gradient_radial.frag.glsl  holographic.frag.glsl  mod.rs
src/net/: http.rs  mod.rs  websocket.rs
src/renderers/: macroquad.rs  macroquad_text_styling.rs  mod.rs
