[package]
name = "ply-engine"
version = "0.1.0"
edition = "2021"
description = "A pure Rust UI layout engine, inspired by Clay."
keywords = ["engine", "ui", "layout", "ply"]
repository = "https://github.com/TheRedDeveloper/ply-engine"
readme = "README.md"
license-file = "LICENSE.md"
exclude = ["scripts/*", ".vscode/*", ".github/*", ".cargo/*"]

[features]
default = []
text-styling = []
tinyvg = ["dep:tinyvg", "kurbo", "lyon"]

[dependencies]
macroquad = { version = "0.4" }
tinyvg = { version = "0.2", default-features = false, optional = true }
kurbo = { version = "0.13.0", optional = true }
lyon = { version = "1.0", optional = true }
