[package]
name = "ply-engine"
version = "0.5.0"
edition = "2021"
description = "The most powerful app engine made entirely in Rust"
keywords = ["engine", "ui", "layout", "gamedev", "graphics"]
repository = "https://github.com/TheRedDeveloper/ply-engine"
readme = "README.md"
license-file = "LICENSE.md"
exclude = ["scripts/*", ".vscode/*", ".github/*", ".cargo/*"]

[features]
default = ["native-a11y"]
text-styling = []
tinyvg = ["dep:tinyvg", "dep:kurbo", "dep:lyon"]
shader-build = ["dep:spirv-cross2"]
built-in-shaders = []
native-a11y = ["dep:accesskit", "dep:accesskit_unix", "dep:accesskit_macos", "dep:accesskit_windows", "dep:accesskit_android"]

[dependencies]
macroquad = { version = "0.4", git = "https://github.com/TheRedDeveloper/macroquad-fix" } # On ply's bleeding edge
tinyvg = { version = "0.2", default-features = false, optional = true }
kurbo = { version = "0.13.0", optional = true }
lyon = { version = "1.0", optional = true }
spirv-cross2 = { version = "0.6", optional = true, default-features = false, features = ["glsl"] }
rustc-hash = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
accesskit = { version = "0.24", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
accesskit_unix = { version = "0.20", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
accesskit_macos = { version = "0.25", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
accesskit_windows = { version = "0.32", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
accesskit_android = { version = "0.7", optional = true, features = ["embedded-dex"] }
